5.3.4 -> 5.4a1:
    - jbj: db: build against external db-5.1.19 using --with-db/--with-dbsql.
    - jbj: rpmlio: disable for now, needs --with-db=internal.
    - jbj: db_tool: disable for now, needs --with-db=internal.
    - jbj: db: target db-5.1.19 using --with-db=external.
    - proyvind: rpm46compat: mostly(?) fix rpmtd iterator
    - jbj: add Fadvise wrapper for posix_dadvise(2).
    - jbj: fix: eliminate dueling --noorder options.
    - jbj: solvedb's never need a chroot prefix.

5.3.3 -> 5.3.4:
    - jbj: release 5.3.4.
    - jbj: i18n: update po files (Translation Project).
    - jbj: rpmrepo: finish refactoring tools/rpmrepo.c.
    - jbj: move package.c from lib -> rpmdb.
    - jbj: rpmrepo: move from rpmio -> rpmdb to finish tools/rpmrepo.c gutting.
    - devzero2000 : added --withoutcheck popt alias (#lp:634104) (#mdvbz:35423) 
    - jbj: i18n: update po files (Translation Project).
    - jbj: mongo: handle endianness at runtime, remove MONGO_BIG_ENDIAN.
    - jbj: mongo: replace internal md5 digest with rpmDigestInit().
    - jbj: mongo: refactor to export from -lrpmio (with no AutoFu!).
    - jbj: mongo: refactor to export the mongo-c-driver API in -lrpmdb.
    - jbj: mongo: bundle up the mongo-c-driver in rpmdb/rpmmdb.c.
    - jbj: mongo: stub-in AutoFu sufficient to get WITH_MONGO defined.
    - jbj: mongo: stub-in a rpmmdb object to carry the Mongo DB C driver.
    - jbj: mongo: stub-in a mongo spewage alias as --wdj:srpm.mongo.
    - jbj: gpsee: replace WITH_JS everwhere with WITH_GPSEE. GPSEE->JS always.
    - jbj: rpmjs: resecusitate sufficiently to use with jx/ngsr.c. more todo++.
    - eveith: Fix ruby include paths
    - rpm.org: git-v1:339f31face44d877c3a6e2fc780e740e7e236eae.
    - jbj: rpmrepo: refactor the methods that don't need/use a header.
    - jbj: rpmrepo: handle all CLI argv processing in rpmrepoNew().
    - afb: tests: set up local magic path for internal file.
    - jbj: rpmrepo: move CLI tables and global __rpmrepo structure.