@@ -466,6 +466,16 @@ AC_PATH_PROG(__CHOWN, chown, /bin/chown, $MYPATH)
 AC_PATH_PROG(__CPIO, cpio, /bin/cpio, $MYPATH)
 AC_PATH_PROG(__CURL, curl, %{_bindir}/curl, $MYPATH)
 AC_PATH_PROG(__CVS, cvs, %{_bindir}/cvs, $MYPATH)
+AC_PATH_PROG(__DB_ARCHIVE, db51_archive, %{_bindir}/db51_archive, $MYPATH)
+AC_PATH_PROG(__DB_CHECKPOINT, db51_checkpoint, %{_bindir}/db51_checkpoint, $MYPATH)
+AC_PATH_PROG(__DB_DUMP, db51_dump, %{_bindir}/db51_dump, $MYPATH)
+AC_PATH_PROG(__DB_LOAD, db51_load, %{_bindir}/db51_load, $MYPATH)
+AC_PATH_PROG(__DB_LOG_VERIFY, db51_log_verify, %{_bindir}/db51_log_verify, $MYPATH)
+AC_PATH_PROG(__DB_PRINTLOG, db51_printlog, %{_bindir}/db51_printlog, $MYPATH)
+AC_PATH_PROG(__DB_RECOVER, db51_recover, %{_bindir}/db51_recover, $MYPATH)
+AC_PATH_PROG(__DB_STAT, db51_stat, %{_bindir}/db51_stat, $MYPATH)
+AC_PATH_PROG(__DB_UPGRADE, db51_upgrade, %{_bindir}/db51_upgrade, $MYPATH)
+AC_PATH_PROG(__DB_VERIFY, db51_verify, %{_bindir}/db51_verify, $MYPATH)
 AC_PATH_PROG(__DIFF, diff, /bin/diff, $MYPATH)
 AC_PATH_PROG(__DITTO, ditto, %{_bindir}/ditto, $MYPATH)
 AC_PATH_PROG(__FILE, file, %{_bindir}/file, $MYPATH)
