@@ -46,6 +46,7 @@
 %_usrlibrpmbin		%{_usrlibrpm}/bin
 %__chroot		%{_usrlibrpmbin}/chroot
 %__cp			%{_usrlibrpmbin}/cp
+%__dbsql		%{_usrlibrpmbin}/dbsql
 %__find			%{_usrlibrpmbin}/find
 %__grep			%{_usrlibrpmbin}/grep
 %__lua			%{_usrlibrpmbin}/lua
@@ -67,6 +68,16 @@
 %__cpio			@__CPIO@
 %__curl			@__CURL@
 %__cvs			@__CVS@
+%__db_archive		@__DB_ARCHIVE@
+%__db_checkpoint	@__DB_CHECKPOINT@
+%__db_dump		@__DB_DUMP@
+%__db_load		@__DB_LOAD@
+%__db_log_verify	@__DB_LOG_VERIFY@
+%__db_printlog		@__DB_PRINTLOG@
+%__db_recover		@__DB_RECOVER@
+%__db_stat		@__DB_STAT@
+%__db_upgrade		@__DB_UPGRADE@
+%__db_verify		@__DB_VERIFY@
 %__diff			@__DIFF@
 %__ditto		@__DITTO@
 %__file			@__FILE@
